fixing logo on mobile

--- a/client/public/css/styles.css
+++ b/client/public/css/styles.css
@@ -212,7 +212,7 @@ hr {
 /* -- HERO ------------------ */
 
 .homepage-hero {
-  padding-top: 90px;
+  padding-top: 120px;
   background:
   linear-gradient(
     rgba(0, 0, 0, 0.7),
